src/test/compile-fail/swap-no-lval.rs
// error-pattern: assignment to non-lvalue

fn main() { 5 <-> 3; }